# gif_trick

./: Cargo.toml  README.md
src/: lib.rs
