[package]
name = "gif_trick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "0.3.3"
serde_json = "1.0.96"
lazy_static = "1.4.0"
yaged = "0.2.0"
itertools = "0.11.0"
